// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Component should render AMP version correctly 1`] = `
<html
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <script
      async=""
      src="https://cdn.ampproject.org/v0.js"
    />
    <script
      async=""
      custom-element="amp-geo"
      src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    />
    <script
      async=""
      custom-element="amp-consent"
      src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    />
    <script
      async=""
      custom-element="amp-analytics"
      src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      amp-custom=""
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <style
      amp-boilerplate=""
    >
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style
        amp-boilerplate=""
      >
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
  </head>
  <body
    class="amp-geo-pending"
  >
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
  </body>
</html>
`;

exports[`Document Component should render APP version correctly 1`] = `
<html
  class="no-js"
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <script
      async=""
      src="https://mybbc-analytics.files.bbci.co.uk/reverb-client-js/reverb-3.9.2.js"
    />
    <meta
      content="noindex"
      name="robots"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <link
      href="modern.main.js"
      rel="modulepreload"
    />
    <link
      href="modern.vendor.js"
      rel="modulepreload"
    />
    <link
      href="modern.igbo.js"
      rel="modulepreload"
    />
    <script>
      
            window.__reverb = {};
            window.__reverb.__reverbLoadedPromise = new Promise((resolve, reject) =&gt; {
              window.__reverb.__resolveReverbLoaded = resolve;
              window.__reverb.__rejectReverbLoaded = reject;
            });

            window.__reverb.__reverbTimeout = setTimeout(() =&gt; {
              window.__reverb.__rejectReverbLoaded();
            }, 5000);
    </script>
    <style
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <script>
      window.SIMORGH_ENV_VARS={"SIMORGH_APP_ENV":"local","SIMORGH_ATI_BASE_URL":"https://logws1363.ati-host.net?","SIMORGH_BASE_URL":"http://localhost:7080","SIMORGH_CONFIG_CACHE_ITEMS":"400","SIMORGH_CONFIG_CACHE_MAX_AGE_SECONDS":"300","SIMORGH_CONFIG_TIMEOUT_SECONDS":"5","SIMORGH_CONFIG_URL":"https://config.test.api.bbci.co.uk/","SIMORGH_CSP_REPORTING_ENDPOINT":"https://ws.bbc-reporting-api.app/report-endpoint","SIMORGH_ICHEF_BASE_URL":"https://ichef.bbci.co.uk","SIMORGH_INCLUDES_BASE_URL":"https://www.test.bbc.com/ws/includes","SIMORGH_INCLUDES_BASE_AMP_URL":"https://news.test.files.bbci.co.uk","SIMORGH_MOST_READ_CDN_URL":"http://localhost:7080","SIMORGH_OPTIMIZELY_SDK_KEY":"LptPKDnHyAFu9V12s5xCz","SIMORGH_PUBLIC_STATIC_ASSETS_ORIGIN":"http://localhost:7080","SIMORGH_PUBLIC_STATIC_ASSETS_PATH":"/","SIMORGH_REVERB_SOURCE":"https://mybbc-analytics.files.bbci.co.uk/reverb-client-js/reverb-3.9.2.js","SIMORGH_WEBVITALS_REPORTING_ENDPOINT":"https://ws.bbc-reporting-api.app/report-endpoint","SIMORGH_WEBVITALS_DEFAULT_SAMPLING_RATE":"100"}
    </script>
  </head>
  <body>
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
    <script>
      window.SIMORGH_DATA={"test":"data"}
    </script>
    <div>
      <!--[if !IE]&gt;&lt;!-->
    </div>
    <script
      src="modern.main.js"
    />
    <script
      src="modern.vendor.js"
    />
    <script
      src="modern.igbo.js"
    />
    <script
      src="legacy.main.js"
    />
    <script
      src="legacy.vendor.js"
    />
    <script
      src="legacy.igbo.js"
    />
    <div>
      <!--&lt;![endif]-->
    </div>
    <script
      type="text/javascript"
    >
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;

exports[`Document Component should render LITE version correctly 1`] = `
<html
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <meta
      content="none"
      name="robots"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style>
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <script>
      (function trackingScript() {
  window.addEventListener('load', function () {
    document.addEventListener('click', function (event) {
      var targetElement = event.target;
      // eslint-disable-next-line no-undef
      if ((targetElement === null || targetElement === void 0 ? void 0 : targetElement.tagName) === 'A') {
        event.stopPropagation();
        event.preventDefault();
        var atiURL = targetElement.getAttribute('data-lite-ati-tracking');
        if (atiURL == null) {
          return;
        }
        var currentAnchorElement = event.currentTarget;
        var nextPageUrl = currentAnchorElement === null || currentAnchorElement === void 0 ? void 0 : currentAnchorElement.href;
        var _window = window,
          _window$screen = _window.screen,
          width = _window$screen.width,
          height = _window$screen.height,
          colorDepth = _window$screen.colorDepth,
          pixelDepth = _window$screen.pixelDepth,
          innerWidth = _window.innerWidth,
          innerHeight = _window.innerHeight;
        var now = new Date();
        var hours = now.getHours();
        var mins = now.getMinutes();
        var secs = now.getSeconds();

        // COOKIE SETTINGS
        var cookieName = 'atuserid';
        var expires = 397; // expires in 13 months
        var cookiesForPage = "; ".concat(document.cookie);
        var atUserIdCookie = cookiesForPage.split("; ".concat(cookieName, "="));
        var atUserIdValue = null;
        if (atUserIdCookie.length === 2) {
          var _atUserIdCookie$pop;
          var cookieInfo = (_atUserIdCookie$pop = atUserIdCookie.pop()) === null || _atUserIdCookie$pop === void 0 ? void 0 : _atUserIdCookie$pop.split(';').shift();
          if (cookieInfo) {
            var decodedCookie = decodeURI(cookieInfo);
            var user = JSON.parse(decodedCookie);
            atUserIdValue = user.val;
          }
        }
        if (!atUserIdValue && crypto.randomUUID) {
          atUserIdValue = crypto.randomUUID();
        }
        var stringifiedCookieValue = JSON.stringify({
          val: atUserIdValue
        });
        if (atUserIdValue) {
          document.cookie = "".concat(cookieName, "=").concat(stringifiedCookieValue, "; path=/; max-age=").concat(expires, "; Secure;");
        }
        var rValue = [width || 0, height || 0, colorDepth || 0, pixelDepth || 0].join('x');
        var reValue = [innerWidth || 0, innerHeight || 0].join('x');
        var hlValue = [hours, mins, secs].join('x');
        var clientSideAtiURL = atiURL.concat('&', 'r=', rValue).concat('&', 're=', reValue).concat('&', 'hl=', hlValue);
        if (navigator.language) {
          clientSideAtiURL = clientSideAtiURL.concat('&', 'lng=', navigator.language);
        }
        if (atUserIdValue) {
          clientSideAtiURL = clientSideAtiURL.concat('&', 'idclient=', atUserIdValue);
        }

        // eslint-disable-next-line no-undef -- This is provided in a helmet script
        window.sendBeaconLite(clientSideAtiURL);
        window.location.assign(nextPageUrl);
      }
    });
  });
})()
    </script>
  </head>
  <body>
    <div>
      <h1>
        App!
      </h1>
    </div>
  </body>
</html>
`;

exports[`Document Component should render correctly 1`] = `
<html
  class="no-js"
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      data-react-helmet="true"
      name="viewport"
    />
    <script
      async=""
      src="https://mybbc-analytics.files.bbci.co.uk/reverb-client-js/reverb-3.9.2.js"
    />
    <title
      data-react-helmet="true"
    >
      Test title
    </title>
    <link
      data-react-helmet="true"
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <link
      href="modern.main.js"
      rel="modulepreload"
    />
    <link
      href="modern.vendor.js"
      rel="modulepreload"
    />
    <link
      href="modern.igbo.js"
      rel="modulepreload"
    />
    <script>
      
            window.__reverb = {};
            window.__reverb.__reverbLoadedPromise = new Promise((resolve, reject) =&gt; {
              window.__reverb.__resolveReverbLoaded = resolve;
              window.__reverb.__rejectReverbLoaded = reject;
            });

            window.__reverb.__reverbTimeout = setTimeout(() =&gt; {
              window.__reverb.__rejectReverbLoaded();
            }, 5000);
    </script>
    <style
      data-emotion-css="7prgni-StyledLink"
    >
      .css-7prgni-StyledLink{display:inline-block;}
    </style>
    <script>
      window.SIMORGH_ENV_VARS={"SIMORGH_APP_ENV":"local","SIMORGH_ATI_BASE_URL":"https://logws1363.ati-host.net?","SIMORGH_BASE_URL":"http://localhost:7080","SIMORGH_CONFIG_CACHE_ITEMS":"400","SIMORGH_CONFIG_CACHE_MAX_AGE_SECONDS":"300","SIMORGH_CONFIG_TIMEOUT_SECONDS":"5","SIMORGH_CONFIG_URL":"https://config.test.api.bbci.co.uk/","SIMORGH_CSP_REPORTING_ENDPOINT":"https://ws.bbc-reporting-api.app/report-endpoint","SIMORGH_ICHEF_BASE_URL":"https://ichef.bbci.co.uk","SIMORGH_INCLUDES_BASE_URL":"https://www.test.bbc.com/ws/includes","SIMORGH_INCLUDES_BASE_AMP_URL":"https://news.test.files.bbci.co.uk","SIMORGH_MOST_READ_CDN_URL":"http://localhost:7080","SIMORGH_OPTIMIZELY_SDK_KEY":"LptPKDnHyAFu9V12s5xCz","SIMORGH_PUBLIC_STATIC_ASSETS_ORIGIN":"http://localhost:7080","SIMORGH_PUBLIC_STATIC_ASSETS_PATH":"/","SIMORGH_REVERB_SOURCE":"https://mybbc-analytics.files.bbci.co.uk/reverb-client-js/reverb-3.9.2.js","SIMORGH_WEBVITALS_REPORTING_ENDPOINT":"https://ws.bbc-reporting-api.app/report-endpoint","SIMORGH_WEBVITALS_DEFAULT_SAMPLING_RATE":"100"}
    </script>
  </head>
  <body>
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
    <script>
      window.SIMORGH_DATA={"test":"data"}
    </script>
    <div>
      <!--[if !IE]&gt;&lt;!-->
    </div>
    <script
      src="modern.main.js"
    />
    <script
      src="modern.vendor.js"
    />
    <script
      src="modern.igbo.js"
    />
    <script
      src="legacy.main.js"
    />
    <script
      src="legacy.vendor.js"
    />
    <script
      src="legacy.igbo.js"
    />
    <div>
      <!--&lt;![endif]-->
    </div>
    <script
      type="text/javascript"
    >
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
